syntax = "proto3";

package pb;

option go_package = "internal/pb";

//os numeros sao a ordem dos campos
message Category {
  string id = 1;
  string name = 2;
  string description = 3;
}

message CreateCategoryRequest {
    string name = 1;
    string description = 2;
}

message CategoryResponse {
    Category category = 1;
}

message blank {}

message GetCategoryRequest {
    string id = 1;
}

message CategoryList {
    repeated Category categories = 1;
}

service CategoryService {
    rpc CreateCategory(CreateCategoryRequest) returns (CategoryResponse) {}
    rpc CreateCategoryStream(CreateCategoryRequest) returns (stream CategoryList) {}
    rpc CreateCategoryStreamBidirectional(stream CreateCategoryRequest) returns (stream Category) {}
    rpc ListCategories(blank) returns (CategoryList) {}
    rpc GetCategory(GetCategoryRequest) returns (CategoryResponse) {}
}
